--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="header_footer.css">
     <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="aos.css">
+    <link rel=icon href=worbay_icon.png>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;0,800;0,900;1,400&family=Noto+Sans:wght@400;700&display=swap"
+          rel="stylesheet">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Worbay</title>
+    <title>Worbay Fire Extinguishers</title>
 </head>
 <style>
     .offcanvas {
@@ -76,9 +84,10 @@
                                 Services
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="services/turnkey.html">Turnkey Solution</a></li>
+                                <li><a class="dropdown-item" href="services/productdist.html">Product Distribution</a>
+                                </li>
+                                <li><a class="dropdown-item" href="services/amcservice.html">ACM services</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -98,7 +107,7 @@
 
     <div class="top_img">
         <div class="text_top">
-            <div  data-aos="zoom-in" data-aos-duration="1500" class="top_text">
+            <div data-aos="zoom-in" data-aos-duration="1500" class="top_text">
                 <h1>WOR<span style="color:#216bac"><u>BAY</u></span></h1>
                 <div class="wrapper">
                     <div class="typing-demo">
@@ -108,6 +117,13 @@
         </div>
     </div>
 </section>
+
+<div class="whatsaap">
+<a target="_blank" href="https://web.whatsapp.com/send?phone=+917774095101&amp;text=Hi, I would like to get more information.."
+   class="footer-link whatsapplink hidemobile">
+    <img src="whatsapp.png" alt="whatsaap">
+</a>
+</div>
 
 <section class="about_main">
     <div class="container">
@@ -148,6 +164,7 @@
         </div>
     </div>
 </section>
+
 <section data-aos="fade-up" class="core-values">
     <h2 class="core_title">WORBAY'S CORE VALUES</h2>
     <div class="container">
@@ -205,7 +222,7 @@
             <div class="col-4 col-md-4 col-lg-3">
                 <div class="acm_s">
                     <div class="solution_imgs">
-                        <h3>ACM <br> SERVICE</h3>
+                        <h3>AMC <br> SERVICE</h3>
                     </div>
                 </div>
             </div>
@@ -320,7 +337,7 @@
 <section class="testimonials">
     <div class="container">
         <h2>TESTIMONIALS</h2>
-        <div  data-aos="fade-up" class="testim_main">
+        <div data-aos="fade-up" class="testim_main">
             <img class="reviewers_img" src="images/profile_img.jpg" alt="">
             <div class="testim_text">
                 <h3>❝</h3>
@@ -339,7 +356,7 @@
     </div>
 </section>
 
-<section   class="clients">
+<section class="clients">
     <div class="container">
         <h2>OUR CLIENTS</h2>
         <div data-aos="fade-right" class="row">
@@ -417,6 +434,7 @@
         </div>
     </div>
 </section>
+
 <section class="map_loc">
     <div class="container">
         <div class="row justify-content-md-center">
@@ -452,33 +470,39 @@
         </div>
     </div>
 </section>
+
 <footer>
     <div class="footer_div">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-5 footer_col">
                     <div class="footer_about">
-                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="Worbay_logo.png" alt="">
+                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="Worbay_logo.png"
+                             alt="">
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consectetur deserunt dignissimos
                             enim
                             eos, esse facilis, laudantium nisi odit omnis qui ut! Corporis ducimus ea eaque esse
                             nesciunt odit
-                            ut.</p></div>
+                            ut.</p>
+                    </div>
                 </div>
 
                 <div class="col-6 col-md-4 col-lg-3 footer_col">
                     <div class="footer_about">
                         <h3>QUICK LINKS</h3>
-                        <p><a href="#">Home</a> <br><a href="aboutus">About Us</a> <br><a href="#">Products</a> <br><a
-                                href="clients">Clients</a> <br><a href="projects">Projects</a> <br><a href="#">Contact</a> <br></p>
+                        <p><a href="index.html">Home</a> <br><a href="aboutus">About Us</a> <br><a href="products">Products</a>
+                            <br><a
+                                    href="clients">Clients</a> <br><a href="projects">Projects</a> <br><a
+                                    href="#">Contact</a> <br></p>
                     </div>
                 </div>
 
                 <div class="col-6 col-md-4 col-lg-2 footer_col">
                     <div class="footer_about">
                         <h3>SERVICES</h3>
-                        <p><a href="#">Turnkey Solution</a> <br><a href="#">Product Distribution</a> <br><a href="#">ACM
+                        <p><a href="services/turnkey.html">Turnkey Solution</a> <br><a href="services/productdist.html">Product
+                            Distribution</a> <br><a href="services/amcservice.html">AMC
                             Service</a></p>
                     </div>
                 </div>
@@ -491,10 +515,10 @@
                                 class="fab footer_icon fa-instagram"></i></a></p>
                     </div>
                 </div>
-
             </div>
             <div class="creator">
-                <p>Designed by <a href="">Satyam Baldawa</a> | 2022 Worbay, All Rights Reserved</p>
+                <p>Designed by <a href="https://satyamportfolio.herokuapp.com/">Satyam Baldawa</a> | © 2022 Worbay, All
+                    Rights Reserved</p>
             </div>
         </div>
     </div>
